# omnitron

./: .all-contributorsrc  .bumpversion.cfg  .dockerignore  Cargo.toml  LICENSE  README.md  justfile  omnitron.service  rustfmt.toml  sonar-project.properties
gate-protocol-http/: Cargo.toml
gate-protocol-http/src/: lib.rs  logging.rs  proxy.rs
gate-protocol-http/src/api/: auth.rs  credentials.rs  mod.rs
gate-protocol-http/src/middleware/: ticket.rs
gate-protocol-mysql/: Cargo.toml
gate-protocol-mysql/src/: client.rs  common.rs  error.rs  lib.rs  session.rs  session_handle.rs  stream.rs
gate-protocol-ssh/: Cargo.toml
gate-protocol-ssh/src/: common.rs  keys.rs  known_hosts.rs  lib.rs
gate-protocol-ssh/src/client/: channel_direct_tcpip.rs  channel_session.rs  error.rs  handler.rs  mod.rs
gate-protocol-ssh/src/server/: mod.rs  russh_handler.rs  service_output.rs  session.rs  session_handle.rs
omnitron/: Cargo.toml  build.rs
omnitron-admin/: Cargo.toml
omnitron-admin/src/: lib.rs  main.rs
omnitron-admin/src/api/: known_hosts_detail.rs  known_hosts_list.rs  logs.rs  mod.rs  otp_credentials.rs  pagination.rs  parameters.rs  password_credentials.rs  public_key_credentials.rs  recordings_detail.rs  roles.rs  sessions_detail.rs  sessions_list.rs  ssh_keys.rs  sso_credentials.rs  targets.rs  tickets_detail.rs  tickets_list.rs  users.rs
omnitron-api/: Cargo.toml
omnitron-api/src/: admin_api.rs  catchall.rs  common.rs  error.rs  lib.rs  main.rs  session.rs  session_handle.rs
omnitron-api/src/api/admin/: known_hosts_detail.rs  known_hosts_list.rs  logs.rs  mod.rs  otp_credentials.rs  pagination.rs  parameters.rs  password_credentials.rs  public_key_credentials.rs  recordings_detail.rs  roles.rs  sessions_detail.rs  sessions_list.rs  ssh_keys.rs  targets.rs  tickets_detail.rs  tickets_list.rs  users.rs
omnitron-api/src/api/user/: api_tokens.rs  (+4 more)
omnitron-common/: Cargo.toml
omnitron-common/src/: error.rs  eventhub.rs  lib.rs
omnitron-common/src/auth/: cred.rs  selector.rs
omnitron-common/src/config/: defaults.rs  mod.rs  target.rs
omnitron-common/src/helpers/: otp.rs  rng.rs  serde_base64.rs  serde_base64_secret.rs
omnitron-common/src/tls/: error.rs  rustls_root_certs.rs
omnitron-common/src/types/: listen_endpoint.rs
omnitron-database-protocols/: Cargo.toml
omnitron-database-protocols/src/: error.rs
omnitron-database-protocols/src/io/: buf.rs  buf_mut.rs  buf_stream.rs  decode.rs
omnitron-db-entities/: Cargo.toml
omnitron-db-entities/src/: ApiToken.rs  OtpCredential.rs  Parameters.rs  PasswordCredential.rs  PublicKeyCredential.rs  Recording.rs  Role.rs  Session.rs  SsoCredential.rs  Target.rs  TargetRoleAssignment.rs  Ticket.rs  User.rs  UserRoleAssignment.rs  lib.rs
omnitron-gate-core/: Cargo.toml
omnitron-gate-core/src/: auth_state_store.rs  data.rs  services.rs  state.rs
omnitron-gate-core/src/config_providers/: db.rs  mod.rs
omnitron-gate-core/src/db/: mod.rs
omnitron-gate-core/src/logging/: database.rs  socket.rs
omnitron-gate-core/src/protocols/: handle.rs  mod.rs
omnitron-gate-database-protocols/: Cargo.toml
omnitron-gate-database-protocols/src/io/: write_and_flush.rs
omnitron-gate-database-protocols/src/mysql/: collation.rs
omnitron-gate-protocol-http/: Cargo.toml
omnitron-gate-protocol-http/src/: catchall.rs  common.rs  lib.rs  logging.rs  proxy.rs  session.rs  session_handle.rs
omnitron-gate-protocol-http/src/api/: api_tokens.rs  auth.rs  common.rs  credentials.rs  info.rs  targets_list.rs
omnitron-gate-protocol-http/src/middleware/: cookie_host.rs  ticket.rs
omnitron-gate-protocol-mysql/: Cargo.toml
omnitron-gate-protocol-mysql/src/: client.rs  common.rs  error.rs  lib.rs  session.rs  session_handle.rs  stream.rs
omnitron-gate-protocol-postgres/: Cargo.toml
omnitron-gate-protocol-postgres/src/: client.rs  common.rs  error.rs  lib.rs  session.rs  session_handle.rs  stream.rs
omnitron-gate-protocol-ssh/: Cargo.toml
omnitron-gate-protocol-ssh/src/: keys.rs  known_hosts.rs  lib.rs
omnitron-gate-protocol-ssh/src/client/: channel_direct_tcpip.rs  channel_session.rs  error.rs  handler.rs  mod.rs
omnitron-gate-protocol-ssh/src/server/: mod.rs  russh_handler.rs  session.rs  session_handle.rs
omnitron-protocol-http/: Cargo.toml
omnitron-protocol-http/src/: catchall.rs  common.rs  error.rs  lib.rs  logging.rs  main.rs  proxy.rs  session.rs  session_handle.rs
omnitron-protocol-http/src/api/: api_tokens.rs  auth.rs  common.rs  credentials.rs  info.rs  mod.rs  sso_provider_detail.rs  sso_provider_list.rs  targets_list.rs
omnitron-protocol-http/src/middleware/: cookie_host.rs  ticket.rs
omnitron-protocol-postgres/: Cargo.toml
omnitron-protocol-postgres/src/: client.rs  common.rs  error.rs  lib.rs  session.rs  session_handle.rs  stream.rs
omnitron-rpc/: Cargo.toml
omnitron-rpc-macro/: Cargo.toml  LICENSE
omnitron-rpc-macro/src/: lib.rs
omnitron-rpc-macro/tests/: server.rs  service.rs
omnitron-rpc/src/: cancellations.rs  client.rs  context.rs  lib.rs  serde_transport.rs  server.rs  trace.rs  transport.rs  util.rs
omnitron-rpc/src/client/: in_flight_requests.rs  stub.rs
omnitron-rpc/src/server/: in_flight_requests.rs  incoming.rs  request_hook.rs  testing.rs
omnitron-rpc/src/transport/: channel.rs
omnitron-rpc/src/util/: serde.rs
omnitron-rpc/tests/: compile_fail.rs  dataservice.rs  proc_macro_hygene.rs  service_functional.rs
omnitron-rpc/tests/compile_fail/: must_use_request_dispatch.rs  tarpc_service_arg_pat.rs  tarpc_service_arg_pat.stderr  tarpc_service_derive_serde.rs  tarpc_service_derive_serde.stderr  tarpc_service_fn_new.rs  tarpc_service_fn_new.stderr  tarpc_service_fn_serve.rs  tarpc_service_fn_serve.stderr
omnitron-sso/: Cargo.toml
omnitron-sso/src/: request.rs  sso.rs
omnitron/src/: config.rs  globals.rs  helpers.rs  logging.rs  main.rs
omnitron/src/commands/: check.rs  client_keys.rs  common.rs  recover_access.rs  run.rs  setup.rs  test_target.rs
omnitron/src/daemon/: daemonizer.rs  mod.rs  rpc.rs  server.rs
omnitron/src/gate/: config.rs  mod.rs
(+270 files in other folders)
