cargo-features = ["profile-rustflags"]

[workspace]
members = [
    "omnitron",
    "omnitron-admin",
    "omnitron-common",
    "omnitron-core",
    "omnitron-db-migrations",
    "omnitron-db-entities",
    "omnitron-database-protocols",
    "omnitron-protocol-http",
    "omnitron-protocol-mysql",
    "omnitron-protocol-postgres",
    "omnitron-protocol-ssh",
    "omnitron-web",
]
default-members = ["omnitron"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["LuxQuant"]
homepage = "https://github.com/luxquant/omnitron"
repository = "https://github.com/luxquant/omnitron"
license = "MIT"
readme = "./README.md"
edition = "2021"
publish = false

[workspace.dependencies]
bytes = "1.9.0"
data-encoding = "2.7.0"
serde = "1.0.217"
serde_json = "1.0.135"
russh = { version = "0.50.0-beta.9" }
tracing = "0.1"
futures = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["net"] }

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[profile.coverage]
inherits = "dev"
rustflags = ["-Cinstrument-coverage"]
