cargo-features = ["profile-rustflags"]

[workspace]
members = [
    "omnitron",
    "omnitron-api",
    "omnitron-gate-common",
    "omnitron-gate-core",
    "omnitron-db-migrations",
    "omnitron-db-entities",
    "omnitron-gate-database-protocols",
    "omnitron-gate-protocol-http",
    "omnitron-gate-protocol-mysql",
    "omnitron-gate-protocol-postgres",
    "omnitron-gate-protocol-ssh",
    "omnitron-web",
    "omnitron-pm",
    "omnitron-rpc",
    "omnitron-rpc-macro",
]
default-members = ["omnitron"]
resolver = "2"

[workspace.package]
version = "0.1.2"
authors = ["LuxQuant", "Warpgate"]
homepage = "https://github.com/luxquant/omnitron"
repository = "https://github.com/luxquant/omnitron"
license = "Apache-2.0"
readme = "./README.md"
edition = "2021"
publish = false

[workspace.dependencies]
bytes = "1.9.0"
data-encoding = "2.7.0"
machine-uid = "0.5.3"
serde = "1.0.217"
serde_json = "1.0.135"
russh = { version = "0.50.0-beta.10" }
tracing = "0.1.41"
tracing-core = "0.1.33"
console-subscriber = "0.4.1"
futures = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["net"] }

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[profile.coverage]
inherits = "dev"
rustflags = ["-Cinstrument-coverage"]
