[package]
name = "gate-protocol-mysql"
version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gate-common = { version = "*", path = "../gate-common" }
gate-core = { version = "*", path = "../gate-core" }
gate-db-entities = { version = "*", path = "../gate-db-entities" }
gate-database-protocols = { version = "*", path = "../gate-database-protocols" }
anyhow = { version = "1.0", features = ["std"] }
async-trait = "0.1.85"
futures.workspace = true
tokio = { version = "1.20", features = ["tracing", "signal"] }
tracing.workspace = true
uuid = { version = "1.3", features = ["v4"] }
bytes.workspace = true
mysql_common = { version = "0.29", default-features = false }
flate2 = { version = "1", features = ["zlib"] } # flate2 requires a backend selection feature, but mysql_common does not depend on any when default-features = false
rand = "0.8"
sha1 = "0.10"
password-hash = { version = "0.2", features = ["std"] }
rustls = "0.23"
rustls-pemfile = "1.0"
tokio-rustls = "0.26"
thiserror = "1.0"
webpki = "0.22"
once_cell = "1.17"
