[package]
name = "gate-protocol-ssh"
version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
ansi_term = "0.12"
anyhow = { version = "1.0", features = ["std"] }
async-trait = "0.1.85"
bimap = "0.6"
bytes.workspace = true
dialoguer = "0.10"
curve25519-dalek = "4.0.0" # pin due to build fail on x86
ed25519-dalek = "2.0.0" # pin due to build fail on x86 in 2.1
futures.workspace = true
russh.workspace = true
sea-orm = { version = "0.12", features = [
    "runtime-tokio-rustls",
], default-features = false }
thiserror = "1.0"
time = "0.3"
tokio = { version = "1.20", features = ["tracing", "signal"] }
tracing.workspace = true
uuid = { version = "1.3", features = ["v4"] }
gate-common = { version = "*", path = "../gate-common" }
gate-core = { version = "*", path = "../gate-core" }
gate-db-entities = { version = "*", path = "../gate-db-entities" }
zeroize = "^1.5"
