[package]
name = "omnitron-admin"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = { version = "1.0", features = ["std"] }
async-trait = "0.1.85"
bytes.workspace = true
chrono = { version = "0.4", default-features = false }
futures.workspace = true
hex = "0.4"
mime_guess = { version = "2.0", default-features = false }
poem = { version = "3.1", features = [
    "cookie",
    "session",
    "anyhow",
    "websocket",
] }
poem-openapi = { version = "5.1", features = [
    "swagger-ui",
    "chrono",
    "uuid",
    "static-files",
] }
russh.workspace = true
rust-embed = "8.3"
sea-orm = { version = "0.12", features = [
    "runtime-tokio-rustls",
    "macros",
], default-features = false }
serde.workspace = true
serde_json.workspace = true
thiserror = "1.0"
tokio = { version = "1.20", features = ["tracing"] }
tracing.workspace = true
uuid = { version = "1.3", features = ["v4", "serde"] }
omnitron-common = { version = "*", path = "../omnitron-common" }
omnitron-core = { version = "*", path = "../omnitron-core" }
omnitron-db-entities = { version = "*", path = "../omnitron-db-entities" }
omnitron-protocol-ssh = { version = "*", path = "../omnitron-protocol-ssh" }
regex = "1.6"
