[package]
name = "omnitron-api"
version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1.85"
chrono = { version = "0.4.39", default-features = false, features = ["serde"] }
cookie = "0.18.1"
data-encoding.workspace = true
bytes.workspace = true
futures.workspace = true
hex = "0.4"
http = "1.0"
once_cell = "1.17"
poem = { version = "3.1.6", features = [
    "cookie",
    "session",
    "anyhow",
    "rustls",
    "websocket",
    "sse",
    "embed",
] }
poem-openapi = { version = "5.1.5", features = [
    "swagger-ui",
    "chrono",
    "uuid",
    "static-files",
] }
reqwest = { version = "0.12", features = [
    "rustls-tls-native-roots",
    "stream",
], default-features = false }
russh.workspace = true
sea-orm = { version = "0.12.15", features = [
    "runtime-tokio-rustls",
    "macros",
], default-features = false }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.43.0", features = ["tracing", "signal"] }
tokio-tungstenite = { version = "0.26.1", features = ["rustls-tls-native-roots"] }
tracing.workspace = true
omnitron-gate-common = { version = "*", path = "../omnitron-gate-common" }
omnitron-gate-core = { version = "*", path = "../omnitron-gate-core" }
omnitron-db-entities = { version = "*", path = "../omnitron-db-entities" }
omnitron-gate-protocol-ssh = { version = "*", path = "../omnitron-gate-protocol-ssh" }
percent-encoding = "2.1"
uuid = { version = "1.12.1", features = ["v4", "serde"] }
regex = "1.6"
url = "2.4"