[package]
name = "omnitron-common"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0"
argon2 = "0.4"
async-trait = "0.1.85"
bytes.workspace = true
chrono = { version = "0.4", default-features = false, features = ["serde"] }
data-encoding.workspace = true
delegate = "0.6"
humantime-serde = "1.1"
futures.workspace = true
once_cell = "1.17"
password-hash = "0.4"
poem = { version = "3.1", features = ["rustls"] }
poem-openapi = { version = "5.1", features = [
    "swagger-ui",
    "chrono",
    "uuid",
    "static-files",
] }
rand = "0.8"
rand_chacha = "0.3"
rand_core = { version = "0.6", features = ["std"] }
russh.workspace = true
rustls-native-certs = "0.6"
sea-orm = { version = "0.12.2", features = [
    "runtime-tokio-rustls",
    "macros",
], default-features = false }
serde.workspace = true
serde_json.workspace = true
thiserror = "1.0"
tokio = { version = "1.20", features = ["tracing"] }
tokio-rustls = "0.26"
totp-rs = { version = "5.0", features = ["otpauth"] }
tracing.workspace = true
tracing-core = "0.1"
url = "2.2"
uuid = { version = "1.3", features = ["v4", "serde"] }
rustls = "0.23"
rustls-pemfile = "1.0"
webpki = "0.22"
aho-corasick = "1.1.3"
tokio-stream.workspace = true
