[package]
name = "omnitron-database-protocols"
description = "Core of SQLx, the rust SQL toolkit. Just the database protocol parts."
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
tokio = { version = "1.20", features = ["io-util"] }
bitflags = { version = "1.3", default-features = false }
bytes.workspace = true
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = [
    "alloc",
    "sink",
] }
memchr = { version = "2.5", default-features = false }
thiserror = "1.0"
