[package]
name = "omnitron-db-entities"
version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
bytes = "1.4"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
poem-openapi = { version = "5.1.5", features = ["chrono", "uuid"] }
sea-orm = { version = "0.12", features = [
    "macros",
    "with-chrono",
    "with-uuid",
    "with-json",
], default-features = false }
serde.workspace = true
serde_json.workspace = true
uuid = { version = "1.3", features = ["v4", "serde"] }
omnitron-common = { version = "*", path = "../omnitron-common" }
