[package]
name = "omnitron-db-entities"
version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
bytes.workspace = true
chrono = { version = "0.4.39", default-features = false, features = ["serde"] }
poem-openapi = { version = "5.1.5", features = ["chrono", "uuid"] }
sea-orm = { version = "1.1.4", features = [
    "macros",
    "with-chrono",
    "with-uuid",
    "with-json",
], default-features = false }
serde.workspace = true
serde_json.workspace = true
uuid = { version = "1.12.1", features = ["v4", "serde"] }
omnitron-gate-common = { version = "*", path = "../omnitron-gate-common" }
