[package]
name = "omnitron-gate-core"
version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
omnitron-gate-common = { version = "*", path = "../omnitron-gate-common" }
omnitron-db-entities = { version = "*", path = "../omnitron-db-entities" }
omnitron-db-migrations = { version = "*", path = "../omnitron-db-migrations" }

anyhow = { version = "1.0", features = ["std"] }
argon2 = "0.4"
async-trait = "0.1.85"
bytes.workspace = true
chrono = { version = "0.4", default-features = false, features = ["serde"] }
data-encoding.workspace = true
humantime-serde = "1.1"
futures.workspace = true
once_cell = "1.17"
packet = "0.1"
password-hash = "0.4"
poem = { version = "3.1.6" }
poem-openapi = { version = "5.1.5", features = [
    "swagger-ui",
    "chrono",
    "uuid",
    "static-files",
] }
rand = "0.8"
rand_chacha = "0.3"
rand_core = { version = "0.6", features = ["std"] }
sea-orm = { version = "0.12.15", features = [
    "runtime-tokio-rustls",
    "macros",
], default-features = false }
serde.workspace = true
serde_json.workspace = true
thiserror = "1.0"
tokio = { version = "1.43.0", features = ["tracing"] }
totp-rs = { version = "5.0", features = ["otpauth"] }
tracing.workspace = true
tracing-core.workspace = true
tracing-subscriber = "0.3.19"
url = "2.2"
uuid = { version = "1.3", features = ["v4", "serde"] }
rustls = "0.23"
rustls-pemfile = "1.0"
webpki = "0.22"

[features]
postgres = ["sea-orm/sqlx-postgres"]
mysql = ["sea-orm/sqlx-mysql"]
sqlite = ["sea-orm/sqlx-sqlite"]
