[package]
name = "omnitron-gate-database-protocols"
description = "Core of SQLx, the rust SQL toolkit. Just the database protocol parts."
version.workspace = true
authors = [
    "Ryan Leckey <leckey.ryan@gmail.com>",
    "Austin Bonander <austin.bonander@gmail.com>",
    "Chloe Ross <orangesnowfox@gmail.com>",
    "Daniel Akhterov <akhterovd@gmail.com>",
]
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
tokio = { version = "1.20", features = ["io-util"] }
bitflags = { version = "1.3", default-features = false }
bytes.workspace = true
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = [
    "alloc",
    "sink",
] }
memchr = { version = "2.5", default-features = false }
thiserror = "1.0"
