[package]
name = "omnitron-gate-protocol-postgres"
version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
omnitron-gate-common = { version = "*", path = "../omnitron-gate-common" }
omnitron-gate-core = { version = "*", path = "../omnitron-gate-core" }
anyhow = { version = "1.0", features = ["std"] }
async-trait = "0.1.85"
tokio = { version = "1.43.0", features = ["tracing", "signal"] }
tracing.workspace = true
uuid = { version = "1.12.1" }
bytes.workspace = true
rustls = "0.23"
rustls-pemfile = "1.0"
tokio-rustls = "0.26"
thiserror = "1.0"
rustls-native-certs = "0.6"
pgwire = { version = "0.25" }
rsasl = { version = "2.1.0", default-features = false, features = ["config_builder", "scram-sha-2", "std", "plain", "provider"] }
futures.workspace = true
