[package]
name = "omnitron-gate-protocol-ssh"
version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
ansi_term = "0.12"
anyhow = { version = "1.0", features = ["std"] }
async-trait = "0.1.85"
bimap = "0.6"
bytes.workspace = true
dialoguer = "0.11.0"
curve25519-dalek = "4.0.0" # pin due to build fail on x86
ed25519-dalek = "2.0.0" # pin due to build fail on x86 in 2.1
futures.workspace = true
russh.workspace = true
sea-orm = { version = "0.12.15", features = [
    "runtime-tokio-rustls",
], default-features = false }
thiserror = "1.0"
time = "0.3"
tokio = { version = "1.43.0", features = ["tracing", "signal"] }
tracing.workspace = true
uuid = { version = "1.12.1", features = ["v4"] }
omnitron-gate-common = { version = "*", path = "../omnitron-gate-common" }
omnitron-gate-core = { version = "*", path = "../omnitron-gate-core" }
omnitron-db-entities = { version = "*", path = "../omnitron-db-entities" }
zeroize = "^1.5"
