[package]
name = "omnitron-protocol-http"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1.85"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
cookie = "0.17"
data-encoding.workspace = true
delegate = "0.6"
futures.workspace = true
http = "1.0"
once_cell = "1.17"
poem = { version = "3.1", features = [
    "cookie",
    "session",
    "anyhow",
    "rustls",
    "websocket",
    "sse",
    "embed",
] }
poem-openapi = { version = "5.1", features = ["swagger-ui"] }
reqwest = { version = "0.12", features = [
    "rustls-tls-native-roots",
    "stream",
], default-features = false }
sea-orm = { version = "0.12", features = [
    "runtime-tokio-rustls",
    "macros",
], default-features = false }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.20", features = ["tracing", "signal"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tracing.workspace = true
omnitron-admin = { version = "*", path = "../omnitron-admin" }
omnitron-common = { version = "*", path = "../omnitron-common" }
omnitron-core = { version = "*", path = "../omnitron-core" }
omnitron-db-entities = { version = "*", path = "../omnitron-db-entities" }
omnitron-web = { version = "*", path = "../omnitron-web" }
omnitron-sso = { version = "*", path = "../omnitron-sso" }
percent-encoding = "2.1"
uuid = { version = "1.3", features = ["v4"] }
regex = "1.6"
url = "2.4"
