[package]
name = "omnitron-rpc-macro"
version.workspace = true
authors = ["Adam Wright <adam.austin.wright@gmail.com>", "Tim Kuehn <timothy.j.kuehn@gmail.com>"]
homepage.workspace = true
repository.workspace = true
license = "MIT"
edition.workspace = true
publish.workspace = true

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.96", features = ["full", "extra-traits"] }

[lib]
proc-macro = true

[dev-dependencies]
assert-type-eq = "0.1.0"
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
omnitron-rpc = { path = "../omnitron-rpc" }
