[package]
name = "omnitron-rpc"
version.workspace = true
authors = [
    "Adam Wright <adam.austin.wright@gmail.com>",
    "Tim Kuehn <timothy.j.kuehn@gmail.com>",
]
homepage.workspace = true
repository.workspace = true
license = "MIT"
edition.workspace = true
publish.workspace = true

[features]
default = []
tokio1 = ["tokio/rt"]
serde-transport = ["tokio1", "tokio-serde", "tokio-util/codec"]
serde-transport-json = ["serde-transport", "tokio-serde/json"]
serde-transport-bincode = ["serde-transport", "tokio-serde/bincode"]
tcp = ["tokio/net"]
unix = ["tokio/net"]
full = [
    "tokio1",
    "serde-transport",
    "serde-transport-json",
    "serde-transport-bincode",
    "tcp",
    "unix",
]

[dependencies]
anyhow = "1.0"
fnv = "1.0"
futures = "0.3"
humantime = "2.0"
pin-project = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive", "rc"] }
static_assertions = "1.1.0"
omnitron-rpc-macro = { path = "../omnitron-rpc-macro" }
thiserror = "2.0"
tokio = { version = "1.20", features = ["time"] }
tokio-util = { version = "0.7.13", features = ["time"] }
tokio-serde = { optional = true, version = "0.9" }
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
    "log",
] }
tracing-opentelemetry = { version = "0.28.0", default-features = false }
opentelemetry = { version = "0.27.1", default-features = false }
opentelemetry-semantic-conventions = "0.16.0"

[dev-dependencies]
assert_matches = "1.4"
bincode = "1.3"
bytes = { version = "1", features = ["serde"] }
flate2 = "1.0"
futures-test = "0.3"
opentelemetry = { version = "0.27.1", default-features = false }
opentelemetry-otlp = "0.27.0"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
pin-utils = "0.1.0"
serde_bytes = "0.11"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.20", features = ["full", "test-util", "tracing"] }
console-subscriber = "0.4"
tokio-serde = { version = "0.9", features = ["json", "bincode"] }
trybuild = "1.0"
tokio-rustls = "0.26"
rustls-pemfile = "2.0"

[[test]]
name = "service_functional"
required-features = ["serde-transport"]

[[test]]
name = "dataservice"
required-features = ["serde-transport", "tcp"]
