[package]
name = "omnitron-sso"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
bytes.workspace = true
thiserror = "1.0"
tokio = { version = "1.20", features = ["tracing", "macros"] }
tracing.workspace = true
openidconnect = { version = "3.5", features = ["reqwest", "rustls-tls", "accept-string-booleans"] }
serde.workspace = true
serde_json.workspace = true
once_cell = "1.17"
jsonwebtoken = "8"
data-encoding.workspace = true
futures.workspace = true
