[package]
name = "omnitron"
version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[build-dependencies]
chrono = "0.4.39"

[dependencies]
ansi_term = "0.12"
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1.85"
atty = "0.2"
bytes.workspace = true
clap = { version = "4.5.26", features = ["derive"] }
colored = "2.1.0"
config = { version = "0.13", features = ["yaml"], default-features = false }
console = { version = "0.15", default-features = false }
console-subscriber = { version = "0.1", optional = true }
data-encoding.workspace = true
dialoguer = "0.10"
futures.workspace = true
macros-rs = "1.4.1"
notify = "5.1"
rcgen = { version = "0.10", features = ["zeroize"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
sea-orm = { version = "0.12.2", default-features = false }
time = "0.3"
tokio = { version = "1.20", features = ["tracing", "signal", "macros"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "local-time",
] }
uuid = "1.3"
global_placeholders = "0.1.0"
dirs = "6.0.0"
nix = { version = "0.29.0", features = ["process", "fs"] }
tabled = { version = "0.17.0", features = ["ansi"] }
chrono = { version = "0.4.39", features = ["serde"] }
psutil = { version = "3.3.0", features = ["serde"] }
omnitron-admin = { version = "*", path = "../omnitron-admin" }
omnitron-common = { version = "*", path = "../omnitron-common" }
omnitron-core = { version = "*", path = "../omnitron-core" }
omnitron-db-entities = { version = "*", path = "../omnitron-db-entities" }
omnitron-protocol-http = { version = "*", path = "../omnitron-protocol-http" }
omnitron-protocol-mysql = { version = "*", path = "../omnitron-protocol-mysql" }
omnitron-protocol-postgres = { version = "*", path = "../omnitron-protocol-postgres" }
omnitron-protocol-ssh = { version = "*", path = "../omnitron-protocol-ssh" }
omnitron-pm = { version = "*", path = "../omnitron-pm" }
omnitron-rpc = { version = "*", path = "../omnitron-rpc", features = ["full"]}

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.4.5"

[features]
default = ["sqlite"]
tokio-console = ["dep:console-subscriber", "tokio/tracing"]
postgres = ["omnitron-core/postgres"]
mysql = ["omnitron-core/mysql"]
sqlite = ["omnitron-core/sqlite"]
