[package]
name = "omnitron"
version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[build-dependencies]
chrono = "0.4.39"

[dependencies]
ansi_term = "0.12"
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1.85"
atty = "0.2"
bytes.workspace = true
clap = { version = "4.5.26", features = ["derive"] }
colored = "2.1.0"
config = { version = "0.15.6", features = ["yaml"], default-features = false }
console = { version = "0.15", default-features = false }
console-subscriber = { version = "0.4.1", optional = true }
data-encoding.workspace = true
dialoguer = "0.11.0"
futures.workspace = true
macros-rs = "1.4.1"
notify = "5.1"
rcgen = { version = "0.10", features = ["zeroize"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
sea-orm = { version = "1.1.4", default-features = false }
time = "0.3.37"
tokio = { version = "1.43.0", features = ["tracing", "signal", "macros"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "local-time",
] }
uuid = "1.12.1"
global_placeholders = "0.1.0"
dirs = "6.0.0"
nix = { version = "0.29.0", features = ["process", "fs"] }
tabled = { version = "0.17.0", features = ["ansi"] }
chrono = { version = "0.4.39", features = ["serde"] }
machine-uid.workspace = true
psutil = { version = "3.3.0", features = ["serde"] }
omnitron-api = { version = "*", path = "../omnitron-api" }
omnitron-gate-common = { version = "*", path = "../omnitron-gate-common" }
omnitron-gate-core = { version = "*", path = "../omnitron-gate-core" }
omnitron-db-entities = { version = "*", path = "../omnitron-db-entities" }
omnitron-gate-protocol-http = { version = "*", path = "../omnitron-gate-protocol-http" }
omnitron-gate-protocol-mysql = { version = "*", path = "../omnitron-gate-protocol-mysql" }
omnitron-gate-protocol-postgres = { version = "*", path = "../omnitron-gate-protocol-postgres" }
omnitron-gate-protocol-ssh = { version = "*", path = "../omnitron-gate-protocol-ssh" }
omnitron-pm = { version = "*", path = "../omnitron-pm" }
omnitron-rpc = { version = "*", path = "../omnitron-rpc", features = ["full"]}

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.4.5"

[features]
default = ["sqlite"]
tokio-console = ["dep:console-subscriber", "tokio/tracing"]
postgres = ["omnitron-gate-core/postgres"]
sqlite = ["omnitron-gate-core/sqlite"]
